# challenge_meli_tesla

./: .gitignore  README.md  pyproject.toml  requirements.txt
1_EDA/: EDA_Ofertas_Relampago.ipynb  utils_eda.py
2_SIMILITUD/: SBERT_vs_E5_Comparison_v2.ipynb  Similitud_Entrega.ipynb  Similitud_Entrega_v2.ipynb  utils_similarity.py
3_PREVISION_FALLOS/: EDA_Predictive_Maintenance.ipynb  Modelo_Final.ipynb  Predictive_Maintenance_Devices.ipynb  utils_classifier.py
