[tool.poetry]
name = "data-science-challenge"
version = "0.1.0"
description = "Data Science Challenge Project"
authors = ["Facu <facumaldo23@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = ">=3.0.0,<4.0.0"
numpy = ">=2.4.1,<3.0.0"
matplotlib = ">=3.10.8,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
plotly = ">=6.5.2,<7.0.0"
scikit-learn = ">=1.8.0,<2.0.0"
scipy = ">=1.17.0,<2.0.0"
joblib = ">=1.5.3,<2.0.0"
sentence-transformers = ">=5.2.2,<6.0.0"
gensim = ">=4.4.0,<5.0.0"
datasets = ">=2.14.0,<3.0.0"
torch = ">=2.9.0,<3.0.0"
torchvision = ">=0.24.0,<1.0.0"
torchaudio = ">=2.9.0,<3.0.0"
xgboost = ">=3.1.3,<4.0.0"
lightgbm = ">=4.6.0,<5.0.0"
catboost = ">=1.2.8,<2.0.0"
imbalanced-learn = ">=0.14.1,<0.15.0"
optuna = ">=4.7.0,<5.0.0"
jupyter = ">=1.1.1,<2.0.0"
jupyterlab = ">=4.5.3,<5.0.0"
notebook = ">=7.5.3,<8.0.0"
ipykernel = ">=7.1.0,<8.0.0"
tqdm = ">=4.67.1,<5.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
